--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
+    "npm": "^9.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-responsive-fontsize": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
